# ndarray-layout

./: Cargo.toml  README.md
src/: lib.rs
src/transform/: broadcast.rs  index.rs  merge.rs  mod.rs  slice.rs  split.rs  tile.rs  transpose.rs
